NestJs학습정리/JoinColumn오류.txt
먼저, @JoinColumn과 @OneToOne 을 지우고 실행하셨을 때 잘 돌아갔던 이유는, 사실 정상 작동한 것이 아니라 테이블을 만드는 작업과 관련된 그 어떤 작업도 진행하지 않았기 때문에 잘 돌아갔던 것이랍니다.

먼저, 해결 방법부터 말씀 드리면 "typeorm/browser" 부분을 "typeorm" 으로 변경해 주세요

에러 메시지를 다시 한 번 보면 import는 쓸 수 없다는 것 같아요!

import "reflect-metadata";

^^^^^^

SyntaxError: Cannot use import statement outside a module


이유는 "typeorm/browser"와 "typeorm" 둘 모두 비슷한 구조를 이루고 있으나 내부적으로는 약간 다릅니다.

"typeorm/browser"는 내부적으로 다른 모듈을 불러올 때 module 방식(import)을 사용하고 있고,

"typeorm"은 내부적으로 다른 모듈을 불러올 때 commonjs 방식(require)을 사용하고 있어요!

아래는 실제 node_modules에 다운로드 받아져 불러와지는 소스코드 사진입니다.

image

사진을 보시면, 왼쪽은 node_modules에 있는 "typeorm/browser" 폴더 내의 파일이고 오른쪽은 "typeorm" 폴더 내의 파일입니다.

왼쪽은 module(import) 방식을 사용하고 있지만, 오른쪽은 commonjs(require) 방식을 사용하고 있네요!



참고로, 우리가 작성한 nestjs의 코드는 실행시 다음의 몇 가지 변경 절차를 거치게 됩니다.(dist 폴더에 만들어져요!)

typescript => javascript로 변경
module(import) => commonjs(require)로 변경
따라서, 변경 작업을 거쳐 최종적으로 실행되는 코드들은 commonjs 방식의 코드들로 이루어져 있어요!



이 흐름에 맞게, 우리가 작성하지 않은 nestjs 코드도 module(import) 방식을 사용하고 있는 "typeorm/browser"가 아니라, commonjs(require)를 사용하고 있는 "typeorm"을 사용해 주셔야 합니다!